vlib/v/checker/tests/struct_field_name_err.vv
struct Release {
	Foo          string
	Bar          &int
	Architecture []string
}

fn main() {
}
